--- a/killrvideo/dsl/README.asciidoc
+++ b/killrvideo/dsl/README.asciidoc
@@ -14,22 +14,33 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 ////
-Gremlin DSL
-===========
+KillrVideo DSL
+==============
 
-This is a starter project that demonstrates how a basic
-link:http://tinkerpop.apache.org/docs/3.2.5/reference/#dsl[Domain Specific Language] (DSL) project is
-structured with Java and Maven. The DSL is built to work with the TinkerPop "modern" toy graph. Please see the unit
-tests in `SocialDslTest` for actual DSL usage.
+This is a starter project that shows how to build a Domain Specific Language (DSL) for
+link:http://tinkerpop.apache.org/[Apache TinkerPop's] Gremlin graph traversal language.
+link:http://tinkerpop.apache.org/docs/current/reference/#dsl[Gremlin DSLs] provide a way to extend the graph language
+with new steps that can help reduce complexity of Gremlin code.
 
 Prerequisites
 -------------
 
 * Java 8 Update 40+
 * link:https://maven.apache.org/[Maven 3.x]
+* A running instance of link:https://www.datastax.com/products/datastax-enterprise-graph[DSE Graph]
+** Load the `graph-examples/killrvideo` data as specified in the link:https://github.com/datastax/graph-examples/blob/master/killrvideo/README.md[README]
 
 Building and Running
 --------------------
 
 [source,text]
 mvn clean install
+
+Executing
+---------
+
+There is a small application that runs serveral traversals using the defined DSL and outputs the results to the
+console. It can be executed through Maven with:
+
+[source,text]
+mvn exec:java -Dexec.mainClass="com.killrvideo.KillrVideoApp"
