Update the READMEs for the DSLs

--- a/killrvideo/dsl/java/README.asciidoc
+++ b/killrvideo/dsl/java/README.asciidoc
@@ -1,23 +1,7 @@
-////
-Licensed to the Apache Software Foundation (ASF) under one or more
-contributor license agreements.  See the NOTICE file distributed with
-this work for additional information regarding copyright ownership.
-The ASF licenses this file to You under the Apache License, Version 2.0
-(the "License"); you may not use this file except in compliance with
-the License.  You may obtain a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-////
 KillrVideo DSL
 ==============
 
-This is a starter project that shows how to build a Domain Specific Language (DSL) for
+This is a Java starter project that shows how to build a Domain Specific Language (DSL) for
 link:http://tinkerpop.apache.org/[Apache TinkerPop's] Gremlin graph traversal language.
 link:http://tinkerpop.apache.org/docs/current/reference/#dsl[Gremlin DSLs] provide a way to extend the graph language
 with new steps that can help reduce complexity of Gremlin code.
@@ -43,9 +27,6 @@ Building and Running
 
 [source,text]
 mvn clean install
-
-Executing
----------
 
 There is a small application that runs serveral traversals using the defined DSL and outputs the results to the
 console. It can be executed through Maven with:
