--- a/killrvideo/dsl/python/README.asciidoc
+++ b/killrvideo/dsl/python/README.asciidoc
@@ -1,7 +1,7 @@
 KillrVideo DSL
 ==============
 
-This is a starter project that shows how to build a Domain Specific Language (DSL) for
+This is a Python starter project that shows how to build a Domain Specific Language (DSL) for
 link:http://tinkerpop.apache.org/[Apache TinkerPop's] Gremlin graph traversal language.
 link:http://tinkerpop.apache.org/docs/current/reference/#dsl[Gremlin DSLs] provide a way to extend the graph language
 with new steps that can help reduce complexity of Gremlin code.
@@ -10,6 +10,7 @@ Prerequisites
 -------------
 
 * Python 2.7+
+* pip
 * A running instance of link:https://www.datastax.com/products/datastax-enterprise-graph[DSE Graph]
 ** Load the `graph-examples/killrvideo` data as specified in the link:https://github.com/datastax/graph-examples/blob/master/killrvideo/README.md[README]
 
@@ -19,11 +20,9 @@ Building and Running
 [source,text]
 mvn clean install
 
-Executing
----------
-
 There is a small application that runs serveral traversals using the defined DSL and outputs the results to the
-console. It can be executed through Maven with:
+console. It can be executed as follows:
 
 [source,text]
-mvn exec:java -Dexec.mainClass="com.killrvideo.KillrVideoApp"
+pip install dse-graph
+python killrvideo_dsl/app.py
