--- a/killrvideo/dsl/python/README.asciidoc
+++ b/killrvideo/dsl/python/README.asciidoc
@@ -1,21 +1,18 @@
-KillrVideo DSL
-==============
+== KillrVideo DSL
 
 This is a Python starter project that shows how to build a Domain Specific Language (DSL) for
 link:http://tinkerpop.apache.org/[Apache TinkerPop's] Gremlin graph traversal language.
 link:http://tinkerpop.apache.org/docs/current/reference/#dsl[Gremlin DSLs] provide a way to extend the graph language
 with new steps that can help reduce complexity of Gremlin code.
 
-Prerequisites
--------------
+=== Prerequisites
 
 * Python 2.7+
 * pip
 * A running instance of link:https://www.datastax.com/products/datastax-enterprise-graph[DSE Graph]
 ** Load the `graph-examples/killrvideo` data as specified in the link:https://github.com/datastax/graph-examples/blob/master/killrvideo/README.md[README]
 
-Building and Running
---------------------
+=== Building and Running
 
 There is a small application that runs several traversals using the defined DSL and outputs the results to the
 console. It can be executed as follows:
